--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -60,6 +60,7 @@ body {
   }
 
   &::before {
+    z-index: -1;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -68,7 +69,7 @@ body {
     height: 100%;
     background-image: url(../images/bg-bottom.svg);
     background-repeat: no-repeat;
-    background-position: 10px 10px;
+    background-position: bottom left;
     background-size: 100%;
 
     @include lg {
